Revision history for Data::Text

0.02
	append() messages can now be daisy chained
	Added length() method

0.01	Sun Sep 12 16:40:26 EDT 2021
        First draft