@@ -3,6 +3,7 @@ Revision history for Data::Text
 0.02
 	append() messages can now be daisy chained
 	Added length() method
+	append() now supports a reference to an array of strings to add
 
 0.01	Sun Sep 12 16:40:26 EDT 2021
         First draft
